[package]
name = "otplib"
description = "a library for one-time password authentication"
version = "0.0.1"
authors = ["Shane Utt <shaneutt@linux.com>"]
keywords = ["otp", "otpauth", "hotp", "totp"]
repository = "https://github.com/rust-otp/otplib"
readme = "README.md"
license = "LGPL-3.0-only"
edition = "2018"

[lib]
name = "otplib"

[dependencies]
base32 = "0.4"
byteorder = "1.3"
err-derive = "0.2"
ring = "0.16"
url = "2.1"
